@@ -1,7 +1,7 @@
 get_site_data_from_pedon_db <-
 function(dsn)
   {
-  q <- "SELECT site.usiteid as site_id, pedon.upedonid as pedon_id, 
+  q <- "SELECT site.siteiid, pedon.peiid, site.usiteid as site_id, pedon.upedonid as pedon_id, 
   latdegrees + IIF(IsNull(latminutes), 0.0, latminutes/ 60.0) + IIF(IsNULL(latseconds), 0.0, latseconds / 60.0 / 60.0) as y,
   -(longdegrees + IIF(IsNull(longminutes), 0.0, longminutes / 60.0) + IIF(IsNull(longseconds), 0.0, longseconds / 60.0 / 60.0)) as x,
   dm.choice as datum,
